--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="css/custom.css"/>
 </head>
   <body>
+     <script src="js/bootstrap.min.js"></script>
    <!-- Navbar start -->
 
     <nav class="navbar navbar-custom" id="bar">
