--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
    <link rel="stylesheet" href="css/custom.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <body>
      <script src="js/bootstrap.min.js"></script>
