--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
    <link rel="stylesheet" href="css/custom.css"/>
+  <script src="content/js/jquery.min.js"></script>
+<script src="content/js/bootstrap.min.js"></script>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <body>
-     <script src="js/bootstrap.min.js"></script>
+   
    <!-- Navbar start -->
 
     <nav class="navbar navbar-custom" id="bar">
