--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
   <body>
-    <script src="content/js/jquery.min.js"></script>
-<script src="content/js/bootstrap.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
    <!-- Navbar start -->
 
     <nav class="navbar navbar-custom" id="bar">
