--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
    <link rel="stylesheet" href="css/custom.css"/>
-
+ 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
   
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
