--- a/index.html
+++ b/index.html
@@ -1,44 +1,34 @@
 <html>
 <head>
+<html>
+
+<head>
   <title> Jacob Jones- portfolio</title>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
-  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
- <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-   <link rel="stylesheet" href="css/custom.css"/>
- 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-  <body>
 
-   <!-- Navbar start -->
-
-    <nav class="navbar navbar-custom" id="bar">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="btn btn-default" class="navbar-toggle collapsed btn btn-default collps" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true">
-        <span class="sr-only"></span>
-
-
-<i class="fa fa-bars" aria-hidden="true"></i>
-
-      </button>
-
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class><a href="#about-me">About</a></li>
-        <li><a href="#skill-set">Skillset</a></li>
-
-         <li><a href="#projects">Portfolio</a></li>
-
-      </ul>
-
+<body>
+  <!-- Navbar start -->
+  <nav class="navbar navbar-custom" id="bar">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="btn btn-default" class="navbar-toggle collapsed btn btn-default collps" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true">
+          <span class="sr-only"></span>
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </button>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class><a href="#about-me">About</a></li>
+          <li><a href="#skill-set">Skillset</a></li>
+          <li><a href="#projects">Portfolio</a></li>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://twitter.com/JacobJ0nes" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>
 </a></li>
