--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-html>
+<html>
 <head>
   <title> Jacob Jones- portfolio</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
